--- a/pt-enciclopedia/package.json
+++ b/pt-enciclopedia/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "ant": "^0.2.0",
+    "antd": "^5.9.1",
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0"
